# nasomail

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: rust.yml
nasomail_client/: Cargo.toml  Dioxus.toml  build.sh
nasomail_client/assets/styles/legacy/: _base.scss  _forms.scss  _images.scss  _links.scss  _tables.scss  _variables.scss  main.scss
nasomail_client/src/: auth.rs  cli.rs  connection.rs  data.rs  main.rs  meta.rs  state.rs
nasomail_client/src/cli/: connect.rs  disconnect.rs  login.rs  logout.rs  mod.rs
nasomail_client/src/components/: auth.rs
nasomail_client/src/session/: auth.rs  connection.rs
nasomail_server/: Cargo.toml  config.json
nasomail_server/sql/: schema.sql
nasomail_server/src/: app.rs  config.rs  ctest.rs  main.rs  meta.rs
nasomail_server/src/api/: ctest.rs  mod.rs
nasomail_server/src/api/users/: auth.rs  has.rs  mod.rs  register.rs
nasomail_shared/: Cargo.toml
nasomail_shared/src/: api.rs  auth.rs  lib.rs
nasomail_shared/src/payload/: auth.rs  mod.rs  register.rs
nasomail_shared/src/query/: user.rs
