[package]
name = "nasomail_client"
version = "0.1.0"
authors = ["Anatnaso <antondev@kuthy.com>"]
edition = "2024"

[dependencies]
nasomail_shared = { path = "../nasomail_shared" }

clap = { version = "4.5.57", features = ["derive"] }
colored = "3.1.1"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
