[package]
name = "nasomail_client"
version = "2.0.0"
authors = ["Anatnaso <antondev@kuthy.com>"]
edition = "2024"

[dependencies]
nasomail_shared = { path = "../nasomail_shared" }

clap = { version = "4.5", features = ["derive"] }
colored = "3"

anyhow = "1"
thiserror = "2"

tokio = { version = "1", features = ["full"] }
reqwest = "0.13.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
