[package]
name = "nasomail_server"
version = "0.1.4"
authors = ["Anatnaso <antondev@kuthy.com>"]
edition = "2024"

[dependencies]
nasomail_shared = { path = "../nasomail_shared" }
ctxguard = { version = "*", features = ["tokio-sync"] }

anyhow = "1"
thiserror = "2"

tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

tracing = "0"
tracing-subscriber = "0"

axum = { version = "0.8", features = ["http2"] }
reqwest = "0.13"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-rustls-aws-lc-rs"] }
